# ERC-Mars-Rover

./: .gitignore  Dockerfile  Dockerfile_base  Dockerfile_nav  Dockerfile_perception  Dockerfile_sim  README.md  build_leorover.sh  docker-compose.yaml  docker-compose_.yaml  frames_2025-05-15_15.19.22.gv  run_gcs.sh  run_leorover.sh  run_sim.sh  setup_pi.sh  todo.rviz  vital_results.csv
annotations/: image_001_annotation.json  image_002_annotation.json  image_003_annotation.json  image_004_annotation.json  image_005_annotation.json  image_006_annotation.json  image_007_annotation.json  image_008_annotation.json  image_009_annotation.json  image_010_annotation.json
datasets/Inside/: data.yaml
docker/: Dockerfile_base  Dockerfile_nav  Dockerfile_perception  Dockerfile_sim  Dockerfile_sim_isaac  Dockerfile_sim_nav  docker-compose.yaml  docker-compose_sim.yaml
src/gcs/: CMakeLists.txt  package.xml  readme.md
src/gcs/gcs_gui/: .project  RoverOverview.opi  top-bar.opi
src/gcs/gcs_gui/scripts/: ProbeTabular.js  UpdateProbe.js
src/gcs/gcs_server/: pom.xml
src/gcs/gcs_server/src/main/java/com/gcs_server/: MyCommandPostprocessor.java  MyPacketPreprocessor.java
src/gcs/launch/: gcs.launch.py  gui_server.launch.py
src/gcs/rviz2/: rviz-config.rviz
src/gcs/scripts/: GCSServerListener.py  RoverTelemetry.py  TelemetryPublisher.py  webview_app.py
src/gcs/web/: index.html
src/gcs/web/css/: style.css
src/gcs/web/js/: leo.js  leo_init.js
src/gcs/web/test/: index_legacy.html  leo_legacy.js  test.html
src/gpio_controller/: CMakeLists.txt  package.xml  setup.py
src/gpio_controller/scripts/: gpio_node.py
src/gpio_controller/srv/: SetLedPattern.srv
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: ProbeData.msg  ProbeLocations.msg  ProbeSegmentation.msg  RoverTelemetry.msg
src/interfaces/srv/: SetLedPattern.srv
src/navigation/: CMakeLists.txt  package.xml  readme.md
src/navigation/assets/: probeModel.dae
src/navigation/config/: algolism.py  nav2_params.yaml  nav2_params_carsten.yaml  nav2_params_old2.yaml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml  navigation_launch.py
src/navigation/launch/: nav2.launch.py  pi.launch.py
src/navigation/scripts/: cmd_repeater.py  path_visulizer.py
src/navigation/src/: probe_filtering.cpp
src/navigation/urdf/: leo.urdf.xacro  macros.xacro
src/probe_detection/: CMakeLists.txt  package.xml  readme  readme.md
src/probe_detection/Training/: README.md  README.txt  SGDoptimizer.py  TrainYOLO.py  TrainYOLO_hyperparameters.py  TrainYOLO_model.py  TrainYOLO_model2.py  TrainYOLO_model_l.py  TrainYOLO_model_m.py  TrainYOLO_model_n.py  TrainYOLO_model_s.py  model_evaluation.py  optimizer_comparison.py  parallel_plot.py  parallel_plot_straight.py  plot_showdown_curves.py  requirements.txt  setup_clearml_template.sh
src/probe_detection/Training/ucloud_training/: README.txt  TrainYOLO.py  TrainYOLO_clearml.py  TrainYOLO_hyperparameters.py  TrainYOLO_optuna.py  batch_size_test.py  epoch_times.json  setup_clearml.sh  unzip.sh
src/probe_detection/models/: labels.yaml
src/probe_detection/scripts/: Capture_test_set.py  ConvertToONNX.py  ImageCaptureNode.py  ValidateModel.py  detect_probe.py  illustrate_algorithm.py  image_handler.py  pose_test.py
src/probe_detection/src/: probe_filtering.cpp  probe_localizer.cpp  yolo.cpp
src/probe_detection/test/: VisulizeProbesGT.py  VisulizeResults.py  compare.py  generate_groundtruth.py  run_test.py
src/probe_detection/test/data/: image_001.npy  image_004.npy  image_005_depth.npy  image_006_depth.npy  image_010.npy  image_010_depth.npy
src/probe_detection/training/: README.md  README.txt  SGDoptimizer.py  TrainYOLO_hyperparameters.py  TrainYOLO_hyperparameters_more_saves.py  TrainYOLO_optimizer.py  epoch_size_test.py  model_evaluation.py  parallel_plot_straight.py  plot_showdown_curves.py  setup_venv.sh
src/probe_detection/verify_system/: VisulizeResults.py  generate_groundtruth.py  run_test.py  transformationmatrix.py
src/probe_detection/verify_system/data/: image_001_depth.npy  image_002.npy  image_002_depth.npy  image_003.npy  image_003_depth.npy  image_004_depth.npy  image_005.npy  image_006.npy  image_007.npy  image_007_depth.npy  image_008.npy  image_008_depth.npy  image_009.npy  image_009_depth.npy  transformation_matrix.npy
src/simulation/: CMakeLists.txt  README.md  package.xml
src/slam/: CMakeLists.txt  package.xml  readme.md  readme_old.md
src/slam/config/: MID360_config.json  build.sh  common.yaml  nav2_params.yaml  navigation_launch.py  navigation_launch_vores.py  zed2i.yaml
src/slam/launch/: cook.launch.py  rgbd_odom-works.launch.py  rtab.launch.py  rtab_map_and_nav2.launch.py  yo.launch.py  yovio.launch.py
src/slam/scripts/: map_filter_node.py  path_node.py
src/slam/urdf/: leo.urdf.xacro
test/: Boxplot.py  data.csv  pose-test.py  pose_errors.csv  test all.py  test.py
test/1min data/: pose_data_1min_20250513_0951.csv  pose_data_1min_20250513_0953.csv  pose_data_1min_20250513_0958.csv  pose_data_1min_20250513_1002.csv  pose_data_1min_20250513_1004.csv  pose_data_1min_20250513_1006.csv  pose_data_1min_20250513_1008.csv  pose_data_1min_20250513_1011.csv  pose_data_1min_20250513_1114.csv  pose_data_1min_20250513_1117.csv
test/1min stone data/: pose_data_1min_suicide_20250513_1130.csv  pose_data_1min_suicide_20250513_1132.csv  pose_data_1min_suicide_20250513_1134.csv  pose_data_1min_suicide_20250513_1137.csv  pose_data_1min_suicide_20250513_1139.csv  pose_data_1min_suicide_20250513_1141.csv  pose_data_1min_suicide_20250514_0942.csv  pose_data_1min_suicide_20250514_0946.csv  pose_data_1min_suicide_20250514_0949.csv  pose_data_1min_suicide_20250514_0954.csv
test/2_5min data/: pose_data_2_5min_20250513_1255.csv  pose_data_2_5min_20250513_1259.csv  pose_data_2_5min_20250513_1303.csv  pose_data_2_5min_20250513_1310.csv  pose_data_2_5min_20250513_1315.csv  pose_data_2_5min_20250513_1327.csv  pose_data_2_5min_20250513_1330.csv  pose_data_2_5min_20250514_0916.csv  (+2 more)
(+113 files in other folders)
